# simpleclaw

./: .gitignore  .graphifyignore  AGENTS.md  CLAUDE.md  DESIGN.md  PRD.md  PROGRESS.md  README.md  TODO.md  admin.pen  config.yaml  config.yaml.example  pyproject.toml
.agent/: AGENT.md  MEMORY.md  SOUL.md  USER.md  conversations.db  daemon.db
.agent/recipes/ai-report/: recipe.yaml
.agent/recipes/check-email/: recipe.yaml
.agent/recipes/morning-briefing/: recipe.yaml
.agent_context/: issue_context.md
.githooks/: graphify-update-if-needed.sh  post-checkout  post-commit  post-merge
.github/: pull_request_template.md
.github/workflows/: admin-2-ci.yml  admin-lighthouse.yml  offline-integration.yml  pr-base-sync.yml  release-lint.yml  release-tag.yml  runtime-contracts.yml  unit-tests.yml
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
browser_extensions/simpleclaw_reader/: README.md  background.js  content.js  manifest.json  popup.html  popup.js
docs/: admin-requirements.md  agent-study-wiki.md  browser_handoff.md  feature-cron.md  feature-llm.md  feature-memory.md  feature-persona.md  feature-recipes.md  feature-security.md  feature-skills.md  feature-subagent-protocol.md  feature-telegram.md  index.md  installation.md  introduction.md  runtime-migration-biz304.md  spike-vertex-gemini-biz444.md
docs/architecture/: llm-transports.md
docs/refactor-audits/: 2026-07-gemini-empty-final.md
graphify-out/: GRAPH_REPORT.md  manifest.json
prompts/dreaming/: active_projects.yaml  agent.yaml  cluster.yaml  memory.yaml  soul.yaml  user.yaml
prompts/study/: daily_digest.yaml  news_relevance.yaml  topic_update.yaml
prompts/system/: asset_selector.yaml  recipe_listing.yaml  runtime_paths.yaml  skill_listing.yaml  tool_usage.yaml  turn_analysis.yaml
scripts/: bench_file_mutation_tracker.py  cleanup_legacy_agent_dir.py  inspect_memory.py  install_realtime_lookup_skill.py  migrate_dreaming_language.py  migrate_insights.py  migrate_local_dir.py  migrate_recipes_dir.py  migrate_secrets.py  run_bot.py  seed_dreaming_prompts.py  setup_admin_api.py  study_daily.py  test_telegram.py
scripts/browser_handoff/: install_native_host.py  smoke_native_host.py
scripts/deploy/: drain_restart_simpleclaw.py
scripts/dev/: smoke_llm_routing_policy.py  test_inventory.py  update_graphify.sh
scripts/review/: collect_verification_evidence.py
scripts/smoke/: live_runtime_smoke.py
specs/001-persona-parser-engine/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-persona-parser-engine/checklists/: persona-engine.md  requirements.md
specs/001-persona-parser-engine/contracts/: persona_engine_api.md
specs/002-llm-router-cli-wrapper/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-llm-router-cli-wrapper/checklists/: requirements.md
specs/002-llm-router-cli-wrapper/contracts/: llm_interface_api.md
specs/003-skill-loader-mcp-client/: plan.md  spec.md  tasks.md
specs/003-skill-loader-mcp-client/checklists/: requirements.md
specs/004-recipe-engine/: spec.md
specs/005-semantic-memory-dreaming/: plan.md  spec.md  tasks.md
specs/006-heartbeat-cron-scheduler/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-heartbeat-cron-scheduler/checklists/: requirements.md
specs/006-heartbeat-cron-scheduler/contracts/: daemon_api.md
specs/007-sub-agent-spawner/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-sub-agent-spawner/checklists/: requirements.md
specs/007-sub-agent-spawner/contracts/: agent_api.md
specs/008-telegram-webhook/: plan.md  spec.md  tasks.md
specs/009-stt-tts-interface/: spec.md
specs/010-logging-dashboard/: spec.md
specs/011-security-multi-turn/: spec.md
spikes/function-gemma-selector/: README.md  evaluate_selector.py  manifest.json  selector_results.json  selector_results.md
src/simpleclaw/: __init__.py  agent.py  capability.py  config.py
tests/: test_e2e_user_scenarios.py  test_prd_scenarios.py  test_real_skill_scenarios.py  test_telegram_scenarios.py
tests/contracts/: conftest.py  test_recipe_entrypoint_contracts.py  test_runtime_path_contracts.py
tests/fixtures/: agent.md  fake_mcp_server.py  memory.md  user.md
tests/integration/: test_admin_audit.py  test_agent_pipeline.py  test_channels_pipeline.py  test_daemon_pipeline.py  test_gemini_openai_compatible_smoke.py  test_llm_pipeline.py  test_mcp_stdio_smoke.py  test_persona_pipeline.py  test_process_isolation_pipeline.py  test_run_bot_admin_api.py
tests/unit/: test_action_result.py  test_active_memory_tool.py  test_active_projects.py  test_admin_api.py  test_admin_api_study.py  test_admin_env_local.py  test_agent.py  test_agent_pool.py  test_agent_protocol.py  test_agent_spawner.py  test_agent_study_e2e_regressions.py  test_agent_workflow_contract.py  test_agent_workspace.py  test_assembler.py  test_asset_inventory_mcp.py  test_asset_inventory_tool.py  test_asset_selector.py  test_bot_wiring_paths.py  test_browser_handoff_native_host.py  test_browser_handoff_store.py  test_browser_handoff_tool.py  test_capability_metadata.py  test_capability_router.py  test_channel_models.py  test_claim_verification.py  test_clarify.py  test_cleanup_legacy_agent_dir.py  test_cli_wrapper.py  test_clustering.py  test_command_guard.py  test_complex_fact_config.py  test_complex_fact_workflow.py  test_config.py  test_config_inspect_tool.py  test_context_retrieval_agent_study.py  test_conversation_store.py  test_conversation_store_clusters.py  test_conversation_store_fd.py  test_conversation_store_vector.py  test_cron_env_security.py  (+180 more)
web/admin/: .env.local.example  .gitignore  README.md  instrumentation.ts  lighthouserc.json  next.config.ts  package-lock.json  package.json  postcss.config.mjs  vitest.config.ts  vitest.setup.ts
web/admin-2/: .gitignore  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  postcss.config.mjs  tsconfig.json  vitest.config.ts  vitest.setup.ts
(+626 files in other folders)
