[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simpleclaw"
version = "0.1.0"
description = "Personal Assistant Agent"
requires-python = ">=3.11"
dependencies = [
    "markdown-it-py>=3.0",
    "tiktoken>=0.7",
    "pyyaml>=6.0",
    "anthropic>=0.40",
    "openai>=1.50",
    "google-genai>=1.0",
    "python-dotenv>=1.0",
    "mcp>=1.0",
    "apscheduler>=3.10",
    "python-telegram-bot>=21.0",
    "aiohttp>=3.9",
    "numpy>=1.26",
    "sqlite-vec>=0.1",
    "sentence-transformers>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
