[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simpleclaw"
version = "0.1.0"
description = "Personal Assistant Agent"
requires-python = ">=3.11"
dependencies = [
    "markdown-it-py>=3.0",
    "tiktoken>=0.7",
    "pyyaml>=6.0",
    "anthropic>=0.40",
    "openai>=1.50",
    "google-genai>=1.0",
    "python-dotenv>=1.0",
    "mcp>=1.0",
    "apscheduler>=3.10",
    "python-telegram-bot>=21.0",
    "aiohttp>=3.12.14",  # BIZ-443: CVE-2025-53643 (HTTP request smuggling) 이하 버전 차단
    "numpy>=1.26",
    "sqlite-vec>=0.1",
    "sentence-transformers>=3.0",
    "pydantic>=2.0",
    "keyring>=24.0",
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "pytest-aiohttp>=1.0",
    # Ruff 0.16이 기존 진단 845건을 노출해 임시 상한 — BIZ-482에서 정리 후 제거.
    "ruff>=0.6,<0.16",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "offline: integration test that does not require external network, API keys, live Telegram, or live daemon",
    "live: test requires live local runtime or operator-controlled environment",
    "external: test requires external network/API",
]
