[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simpleclaw"
version = "0.1.0"
description = "Personal Assistant Agent"
requires-python = ">=3.11"
dependencies = [
    "markdown-it-py>=3.0",
    "tiktoken>=0.7",
    "pyyaml>=6.0",
    "anthropic>=0.40",
    "openai>=1.50",
    "google-genai>=1.0",
    "python-dotenv>=1.0",
    "mcp>=1.0",
    "apscheduler>=3.10",
    "python-telegram-bot>=21.0",
    "aiohttp>=3.12.14",  # BIZ-443: CVE-2025-53643 (HTTP request smuggling) 이하 버전 차단
    "numpy>=1.26",
    "sqlite-vec>=0.1",
    "sentence-transformers>=3.0",
    "pydantic>=2.0",
    "keyring>=24.0",
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "pytest-aiohttp>=1.0",
    "ruff>=0.6",
]

[tool.ruff.lint.per-file-ignores]
# BIZ-482: 이 파일들은 naive local datetime을 저장/API 계약으로 사용한다.
# UTC-aware 전환은 데이터 호환성 변경이므로 별도 마이그레이션 없이 자동 수정하지 않는다.
"scripts/cleanup_legacy_agent_dir.py" = ["DTZ005", "DTZ006"]
"scripts/migrate_dreaming_language.py" = ["DTZ005"]
"scripts/migrate_insights.py" = ["DTZ005", "DTZ007"]
"scripts/migrate_local_dir.py" = ["DTZ005"]
"scripts/run_bot.py" = ["BLE001", "DTZ005", "S110"]
"src/simpleclaw/agent/builtin_tools.py" = ["BLE001", "DTZ005", "DTZ006", "S110"]
"src/simpleclaw/agent/clarify.py" = ["TRY004"]
"src/simpleclaw/agent/commands.py" = ["BLE001"]
"src/simpleclaw/agent/context_retrieval.py" = ["BLE001"]
"src/simpleclaw/agent/orchestrator.py" = ["BLE001"]
"src/simpleclaw/agent/recipe_generate.py" = ["DTZ005"]
"src/simpleclaw/agent/turn_analysis.py" = ["TRY004"]
"src/simpleclaw/agents/protocol.py" = ["BLE001"]
"src/simpleclaw/agents/spawner.py" = ["DTZ005"]
"src/simpleclaw/channels/admin_api.py" = ["S110"]
"src/simpleclaw/channels/admin_audit.py" = ["DTZ005", "DTZ007"]
"src/simpleclaw/channels/admin_routes/config.py" = ["BLE001"]
"src/simpleclaw/channels/admin_routes/secrets.py" = ["BLE001"]
"src/simpleclaw/channels/admin_routes/system.py" = ["BLE001", "S110"]
"src/simpleclaw/channels/telegram_bot.py" = ["BLE001", "S110"]
"src/simpleclaw/channels/webhook_server.py" = ["BLE001", "DTZ005"]
"src/simpleclaw/daemon/daemon.py" = ["DTZ005"]
"src/simpleclaw/daemon/dreaming_trigger.py" = ["DTZ005"]
"src/simpleclaw/daemon/heartbeat.py" = ["DTZ005"]
"src/simpleclaw/daemon/scheduler.py" = ["BLE001", "DTZ005", "S110"]
"src/simpleclaw/daemon/store.py" = ["DTZ005"]
"src/simpleclaw/daemon/wait_states.py" = ["DTZ005"]
"src/simpleclaw/db/migrations.py" = ["DTZ005"]
"src/simpleclaw/llm/router.py" = ["BLE001"]
"src/simpleclaw/logging/metrics.py" = ["DTZ005"]
"src/simpleclaw/logging/redaction.py" = ["BLE001"]
"src/simpleclaw/logging/structured_logger.py" = ["DTZ005"]
"src/simpleclaw/memory/active_projects.py" = ["DTZ005"]
"src/simpleclaw/memory/conversation_store.py" = ["DTZ005"]
"src/simpleclaw/memory/dreaming_runs.py" = ["DTZ005"]
"src/simpleclaw/memory/embedding_service.py" = ["BLE001"]
"src/simpleclaw/memory/insights.py" = ["DTZ005"]
"src/simpleclaw/memory/memory_items_sync.py" = ["DTZ005"]
"src/simpleclaw/memory/reject_blocklist.py" = ["DTZ005"]
"src/simpleclaw/memory/stats.py" = ["DTZ005"]
"src/simpleclaw/memory/suggestions.py" = ["DTZ005"]
"src/simpleclaw/memory/supersession.py" = ["DTZ001", "DTZ005"]
"src/simpleclaw/proactive/actions.py" = ["DTZ005"]
"src/simpleclaw/proactive/context_collectors.py" = ["DTZ005"]
"src/simpleclaw/proactive/context_planner.py" = ["DTZ005"]
"src/simpleclaw/proactive/dreaming_extractor.py" = ["BLE001", "DTZ005"]
"src/simpleclaw/proactive/models.py" = ["DTZ005"]
"src/simpleclaw/proactive/presenter.py" = ["DTZ005"]
"src/simpleclaw/proactive/store.py" = ["DTZ005"]
"src/simpleclaw/recipes/learning.py" = ["DTZ005"]
"src/simpleclaw/skills/learning.py" = ["DTZ005"]
"src/simpleclaw/skills/materializer.py" = ["DTZ005"]
"src/simpleclaw/skills/mcp_client.py" = ["BLE001"]
"src/simpleclaw/skills/realtime_lookup.py" = ["S110"]
"src/simpleclaw/voice/stt.py" = ["ASYNC230"]
"tests/test_e2e_user_scenarios.py" = ["DTZ005"]
"tests/test_prd_scenarios.py" = ["DTZ005"]
"tests/test_telegram_scenarios.py" = ["DTZ005"]
"tests/unit/test_active_projects.py" = ["DTZ001"]
"tests/unit/test_admin_api.py" = ["DTZ005"]
"tests/unit/test_agent.py" = ["DTZ005"]
"tests/unit/test_channel_models.py" = ["DTZ001", "DTZ005"]
"tests/unit/test_clustering.py" = ["DTZ005"]
"tests/unit/test_conversation_store.py" = ["DTZ005"]
"tests/unit/test_conversation_store_vector.py" = ["DTZ005"]
"tests/unit/test_daemon_store.py" = ["DTZ005"]
"tests/unit/test_dreaming_active_projects.py" = ["DTZ005"]
"tests/unit/test_dreaming_decay.py" = ["DTZ001"]
"tests/unit/test_dreaming_runs.py" = ["DTZ001", "DTZ005"]
"tests/unit/test_dreaming_self_restore.py" = ["DTZ001"]
"tests/unit/test_dreaming_trigger.py" = ["DTZ001", "DTZ005"]
"tests/unit/test_insights.py" = ["DTZ001"]
"tests/unit/test_memory_items.py" = ["DTZ005"]
"tests/unit/test_memory_items_sync.py" = ["DTZ001"]
"tests/unit/test_memory_stats.py" = ["DTZ001"]
"tests/unit/test_memory_supersession.py" = ["DTZ001"]
"tests/unit/test_orchestrator_long_term_retrieval.py" = ["DTZ005"]
"tests/unit/test_orchestrator_rag.py" = ["DTZ001", "DTZ005"]
"tests/unit/test_proactive_context_collectors.py" = ["DTZ001"]
"tests/unit/test_proactive_context_planner.py" = ["DTZ001"]
"tests/unit/test_proactive_context_provider_resolver.py" = ["DTZ001"]
"tests/unit/test_proactive_dreaming_extractor.py" = ["DTZ001"]
"tests/unit/test_proactive_opportunities.py" = ["DTZ001", "DTZ005"]
"tests/unit/test_proactive_policy.py" = ["DTZ001"]
"tests/unit/test_proactive_telegram_presenter.py" = ["DTZ001"]
"tests/unit/test_safety_backup.py" = ["DTZ001"]
"tests/unit/test_structured_logger.py" = ["DTZ005"]
"tests/unit/test_study_interest_signals.py" = ["DTZ001"]
"tests/unit/test_study_types.py" = ["BLE001"]
"tests/unit/test_suggestions.py" = ["DTZ005"]
"tests/unit/test_wait_states.py" = ["DTZ005"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "offline: integration test that does not require external network, API keys, live Telegram, or live daemon",
    "live: test requires live local runtime or operator-controlled environment",
    "external: test requires external network/API",
]
